--- a/src/auv_controller/setup.cfg
+++ b/src/auv_controller/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/AUV_controller
+script_dir=$base/lib/auv_controller
 [install]
-install_scripts=$base/lib/AUV_controller
+install_scripts=$base/lib/auv_controller
