--- a/src/auv_controller/package.xml
+++ b/src/auv_controller/package.xml
@@ -10,7 +10,12 @@
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
   <depend>serial</depend>
-
+  <depend> cv2 </depend>
+  <depend> socket </depend>
+  <depend> numpy </depend>
+  <depend> threading </depend>
+  <depend> re </depend>
+  
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
