--- a/src/auv_controller/package.xml
+++ b/src/auv_controller/package.xml
@@ -9,6 +9,7 @@
 
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>serial</depend>
   <depend> cv2 </depend>
   <depend> socket </depend>
