--- a/src/auv_controller/package.xml
+++ b/src/auv_controller/package.xml
@@ -16,6 +16,7 @@
   <depend> numpy </depend>
   <depend> threading </depend>
   <depend> re </depend>
+  <depend> launch </depend>
   
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
