--- a/src/auv_controller/package.xml
+++ b/src/auv_controller/package.xml
@@ -17,6 +17,7 @@
   <depend> threading </depend>
   <depend> re </depend>
   <depend> launch </depend>
+  <depend> collection </depend>
   
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
